--- a/examples/angular-cli/src/index.html
+++ b/examples/angular-cli/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular5</title>
+  <title>ng2-eonasdan-datetimepicker examples</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
