--- a/examples/webpack/src/index.html
+++ b/examples/webpack/src/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <base href="/">
-    <title>Angular With Webpack</title>
+    <title>ng2-eonasdan-datetimepicker examples</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <app-root>Loading...</app-root>
   </body>
 </html>
